--- a/otp_config.json
+++ b/otp_config.json
@@ -575,5 +575,28 @@
         "upgrade-insecure-requests": "1",
         "user-agent": "Mozilla/5.0 (Linux; Android 6.0; Nexus 5 Build/MRA58N) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.0.0 Mobile Safari/537.36 Edg/130.0.0.0"
     }
+},
+    {
+    "name": "Matahari",
+    "method": "post",
+    "url": "https://matahari-backend-prod.marmeto.com/api/auth/re-activation",
+    "data": "{\"mobileCountryCode\": \"\", \"mobileNumber\": \"target_number\", \"activationCode\": \"\"}",
+    "headers": {
+        "Host": "matahari-backend-prod.marmeto.com",
+        "accept": "*/*",
+        "accept-encoding": "gzip, deflate, br, zstd",
+        "accept-language": "en-US,en;q=0.9",
+        "content-length": "74",
+        "content-type": "application/json",
+        "origin": "https://matahari.com",
+        "referer": "https://matahari.com/",
+        "sec-ch-ua": "\"Google Chrome\";v=\"135\", \"Not-A.Brand\";v=\"8\", \"Chromium\";v=\"135\"",
+        "sec-ch-ua-mobile": "?1",
+        "sec-ch-ua-platform": "\"Android\"",
+        "sec-fetch-dest": "empty",
+        "sec-fetch-mode": "cors",
+        "sec-fetch-site": "cross-site",
+        "user-agent": "Mozilla/5.0 (Linux; Android 6.0; Nexus 5 Build/MRA58N) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/135.0.0.0 Mobile Safari/537.36"
+    }
 }
 ]
